Ajustes finais fase 2
